# financial-decisions

./: README.md  matplotlibrc
notebooks/: 0-rational-choice.ipynb  1-crra-utility.ipynb  2-approximating-risk-adjusted-excess-returns.ipynb  3-asymmetric-payoffs.ipynb  4-riskless-lifetime-spending.ipynb  5-lifetime-spending-with-risky-asset.ipynb  6-monte-carlo.ipynb  monte-carlo.py  risky-allocation-bellman.py  tax.py
src/: pyproject.toml
src/findec/: __init__.py  assets.py  consumption.py  dataclasses.py  policy.py  returns.py  simulate.py  survival.py  utility.py  visualise.py
