[project]
name = "findec"
version = "0.0.0"
description = "Working through The Missing Billionaires"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=5.24.1",
    "polars>=1.8.2",
    "pyarrow>=18.1.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241221",
]

# To allow the project to be installed into the environment
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
